--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,10 @@
     "@tiptap/extension-link": "^3.13.0",
     "@tiptap/extension-list": "^3.13.0",
     "@tiptap/extension-placeholder": "^2.27.1",
+    "@tiptap/extension-table": "^3.13.0",
+    "@tiptap/extension-table-cell": "^3.13.0",
+    "@tiptap/extension-table-header": "^3.13.0",
+    "@tiptap/extension-table-row": "^3.13.0",
     "@tiptap/extension-task-item": "^3.13.0",
     "@tiptap/extension-task-list": "^3.13.0",
     "@tiptap/extension-text-style": "^3.13.0",
